@@ -8,6 +8,7 @@ Changes from 4.1.0alpha1 to 4.1.0alpha2
 - Implemented enhancement #14005: Remove putenv( "TZ=$timezone" ); from index.php
 - Implemented enhancement #14166: Clear the user info cache to make sure the evaluated policies are right
 - Implemented enhancement #14189: Move debug error handler function into the eZDebug class
+- Implemented enhancement #14135: Remove unusable openfts code
 
 *Design:
 
